--- a/PluginLoader2Web/PluginLoader2Web.csproj
+++ b/PluginLoader2Web/PluginLoader2Web.csproj
@@ -9,10 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="8.3.0" />
+    <PackageReference Include="BlazorAnimate" Version="3.0.0" />
     <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
     <PackageReference Include="FluentMigrator.Runner.Core" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner.Postgres" Version="7.1.0" />
     <PackageReference Include="MudBlazor" Version="7.*" />
+    <PackageReference Include="MudBlazor.ThemeManager" Version="2.1.0" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Tomlyn" Version="0.19.0" />
